# relativistic_sfs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
assets/: body_frag.glsl  body_vert.glsl  dot_frag.glsl  dot_vert.glsl  traj_vert.glsl
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cc  util.h
src/model/: CMakeLists.txt  solar_system.cc  solar_system.h
src/physics/: CMakeLists.txt  kepler.cc  kepler.h  physics.cc  physics.h
src/render/: CMakeLists.txt  body.cc  body.h  camera.cc  camera.h  init.h  window.cc  window.h
src/render/gl/: shader.cc  shader.h  window.cc  window.h
src/render/scene/: body.cc  body.h  camera.cc  camera.h  dot.cc  dot.h  trajectory.cc  trajectory.h
